# VoxelForge

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
config/: block_palette.json  settings.yaml
core/: __init__.py  block_mapper.py  gpu_manager.py  mesh_processor.py  point_cloud.py  sparse_voxels.py  voxelizer.py
gui/: __init__.py  main_window.py  viewport_3d.py
gui/web/: index.html
gui/web_panels/: __init__.py  info_panel.py
gui/web_panels/html/: index.html
gui/web_panels/js/: bridge.js
gui/widgets/: __init__.py  log_viewer.py  palette_viewer.py  progress_panel.py  settings_form.py
i18n/: __init__.py  i18n_manager.py  locale_meta.json
i18n/locales/: en_US.json  ja_JP.json  ko_KR.json  ru_RU.json  zh_CN.json
io_formats/: __init__.py  litematic_exporter.py  mca_exporter.py  nbt_encoder.py  schematic_exporter.py
io_formats/exporters/: __init__.py  litematic_exporter.py
io_formats/importers/: __init__.py  litematic_importer.py
packaging/: voxelforge.desktop
pipelines/: __init__.py  pipeline_city.py  pipeline_model.py  pipeline_scan.py
tests/: __init__.py  test_core.py  test_i18n.py
